--- a/assets/styles/base/_mixins.scss
+++ b/assets/styles/base/_mixins.scss
@@ -6,7 +6,7 @@
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  z-index: 10;
+  z-index: 5;
 
   &::before {
     position: absolute;
@@ -63,6 +63,13 @@
   font-size: 12px;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
+}
+
+@mixin text-menu {
+  color: #fff;
+  font-size: 24px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
 }
 
 @mixin button {
