--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,3 +1,4 @@
+@import './libs/normalize';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 @import './base/variables';
@@ -14,6 +15,4 @@
   }
 }
 
-@import './blocks/promo';
-@import './blocks/benefit';
-@import './blocks/contacts';
+@import './blocks/all';
